--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "github.com/tiagomx/monitor-de-vendads",
+  "name": "monitor-de-vendads",
   "version": "0.0.0",
   "description": "Tiagomx/Monitor-de-vendads @ Feb 13, 2019",
   "author": null,
